- adapt to URPM-4.15

Version 7.8.1 - 8 September 2012

- fix urpmq -h (mga#7390)

Version 7.8 - 7 September 2012

- add urpm::check_cache_dir() for mgaonline (mga#6083)

Version 7.7 - 5 September 2012

- use xz instead of lzma in order to read metadata

Version 7.6 - 1 September 2012

- translation updates

Version 7.5 - 31 August 2012

- fix testsuite
- library:
  o drop urpm::download::sync() (obsolete for years)
  o enhanced doc
  o internal cleanup (needs new drakx/rpmdrake)
- security:
  o downgrade missing medium key check question to a warning for virtual media
    without keys when using urpmi --use-distrib
  o downgrade missing signature check for local packages from a question to a
    warning
  o honor per medium "verify-rpm" option for missing signature check
  o media have keys, not signatures
  o prefix some messages with "SECURITY:"
  o warn about packages we don't check even if not using -v
- unrequested package list management (for orphans) (mga#7167):
  o do not wrongly tell we updated the unrequested package list when we didn't
    (eg: when not having the proper rights such as running urpmq as !root)
  o only write the unrequested package list file if the list actually changed
- urpmi.addmedia:
  o add --(no-)verify-rpm options
- urpmq: minor documentation fix (mga#7166)

Version 7.4 - 24 August 2012

- decrease total package count when some files are missing
- fix installing a package if user acks bogus signature
  (regression introduced in 7.0)
- security:
  o warn about missing signatures on packages from media without signatures
  o warn when a medium has no signature
  o warn when signature checking is disabled per medium

Version 7.3 - 24 August 2012

- only search for README.urpmi files in doc files (needs URPM >= 4.13)

Version 7.2 - 29 June 2012

- urpme: simplify traversing DB (needs URPM >= 4.10)

Version 7.1 - 13 June 2012

- adapt to URPM-4.2

Version 7.0 - 8 June 2012

- adapt to perl-5.16.0
- adapt to rpm-4.10.0