@@ -1,4 +1,5 @@
 - adapt to URPM-4.15
+- remove long deprecated & unused functions
 
 Version 7.8.1 - 8 September 2012
 
